# Automated-Phishing-URL-Detection

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.mimocode/: .cron-lock
app/: simulator.py
extension/: README.md  manifest.json  warning.html
extension/background/: service-worker.js
extension/content/: content.css  content.js
extension/lib/: analyzer.js  config.js  features.js  model.js  whitelist.js
extension/options/: options.css  options.html  options.js
extension/popup/: popup.css  popup.html  popup.js
scripts/: add_complex_legit_urls.py  augment_dataset.py  augment_typosquatting.py  enhance_dataset_v2.py  fetch_lexical_data.py  fetch_vision_data.py  gen_extension_constants.py  generate_url_variations.py
src/api/: server.py
src/core/: config.py  hybrid.py
src/lexical/: features.py  model.py  train.py
src/utils/: constants.py
src/vision/: capture.py  dataset.py  model.py  train.py
tests/: test_api.py  test_pipeline.py  test_robustness.py
