[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "phishguard"
version = "1.0.0"
description = "Automated phishing URL detection using hybrid ML pipeline"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "pillow>=10.0",
    "streamlit>=1.30",
    "torch>=2.0",
    "torchvision>=0.17",
    "playwright>=1.40",
    "requests>=2.31",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]
onnx = [
    "skl2onnx>=1.16",
    "onnx>=1.15",
    "onnxruntime>=1.16",
]

[tool.setuptools.packages.find]
include = ["src*"]
